deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 248189943700.dkr.ecr.eu-west-3.amazonaws.com/my-ecr-repo-jvs:nginx
        ports:
        - containerPort: 80
